=== randtoolbox: an R package for random number generation and tests ===

Version 1.09
=============

NEW FEATURES

- start runif interface for congruential generator and WELL RNG
- vignette contains two chapters.
- start to test true randomness (not included in this version)

STRUCTURAL CHANGE

- extract Pierre L'Ecuyer's code from randtoolbox and 
put it in a dedicated package rngWELL
- change the licence of randtoolbox from GPL to BSD licence
- depends now on rngWELL.


Version 1.08 (never released on CRAN)
=============

NEW FEATURES

- add function get.primes
- table of primes moved from randtoolbox.c to primes.h and compressed
  by storing half difference from the previous prime instead of each
  prime at least 5
- start runifinterface.

Version 1.07
=============

NEW FEATURES

- integrate code for Halton, Sobol sequence from fBasics (Rmetrics)
- randoolbox is now part of Rmetrics project (available on R-forge)
- increase the speed of congruRand.

BUG FIXES

- fix setSeed function.
- a warning shows up on 64 bit architecture.

BUG REPORT

- setting the seed with WELL's RNGs was not correct, 
reported by Petr Savicky.

Version 1.06
=============

BUG FIXES

- the degree of freedom is now correct for the order test.

BUG REPORT

- Astley Lin reports that the degree-of-freedom(df) of 
chi-square test is wrong for the order test.

Version 1.05
=============

NEW FEATURES

- add new WELL generators based on L'Ecuyer's code.
- add the Sobol and Halton sequences from fOptions package.

BUG FIXES

- Yes, it compiles on 64bit linux both on CRAN and R-forge.

Version 1.04
=============

BUG REPORT

- the package does not compil on Fedora 8 x86_64 boxes,
reported by Brian Ripley.


Version 1.03
=============

NEW FEATURES

- add the WELL generator thanks to the code of P. L'Ecuyer.
- SFMT now allows for different mersenne exponents as well as parameter sets.
- increase the possible dimension for Torus algorithm from 1000 to 100 000.